--- a/index.html
+++ b/index.html
@@ -8,6 +8,89 @@
   <title>Boolando</title>
 </head>
 <body>
+
+  <header>
+    <div class="container">
+      <nav class="menu">MENU</nav>
+      <div class="logo">LOGO</div>
+      <div class="icons">ICONS</div>
+    </div>
+  </header>
+
+  <main>
+    <div class="container">
+      <div class="row">
+        
+        <div class="product-card">
+          <div class="image">
+            IMMAGINE
+            <span class="heart">CUORE</span>
+            <span class="discount">SCONTO</span>
+            <span class="text-label">TESTO</span>
+          </div>
+          <div class="text">TESTO</div>
+        </div>
+
+        <div class="product-card">
+          <div class="image">
+            IMMAGINE
+            <span class="heart">CUORE</span>
+            <span class="discount">SCONTO</span>
+            <span class="text-label">TESTO</span>
+          </div>
+          <div class="text">TESTO</div>
+        </div>
+
+        <div class="product-card">
+          <div class="image">
+            IMMAGINE
+            <span class="heart">CUORE</span>
+            <span class="discount">SCONTO</span>
+            <span class="text-label">TESTO</span>
+          </div>
+          <div class="text">TESTO</div>
+        </div>
+
+        <div class="product-card">
+          <div class="image">
+            IMMAGINE
+            <span class="heart">CUORE</span>
+            <span class="discount">SCONTO</span>
+            <span class="text-label">TESTO</span>
+          </div>
+          <div class="text">TESTO</div>
+        </div>
+
+        <div class="product-card">
+          <div class="image">
+            IMMAGINE
+            <span class="heart">CUORE</span>
+            <span class="discount">SCONTO</span>
+            <span class="text-label">TESTO</span>
+          </div>
+          <div class="text">TESTO</div>
+        </div>
+
+        <div class="product-card">
+          <div class="image">
+            IMMAGINE
+            <span class="heart">CUORE</span>
+            <span class="discount">SCONTO</span>
+            <span class="text-label">TESTO</span>
+          </div>
+          <div class="text">TESTO</div>
+        </div>
+
+      </div>
+    </div>
+  </main>
+
+  <footer>
+    <div class="container">
+      <div class="conditions">CONDIZIONI</div>
+      <div class="icons">ICONE</di>
+    </div>
+  </footer>
   
 </body>
 </html>
