[add] fixed header

--- a/index.html
+++ b/index.html
@@ -113,7 +113,14 @@
 
   <footer>
     <div class="container">
-      <div class="conditions">CONDIZIONI</div>
+      <div class="conditions">
+        <h4>Boolando s.r.l</h4>
+        <nav>
+          <ul>
+            <li><a href="#">Informazioni legali</a></li>
+          </ul>
+        </nav>
+      </div>
       <div class="icons">ICONE</di>
     </div>
   </footer>
